--- a/src/DamaSalesApp/DamaSales/Pages/Sales.xaml
+++ b/src/DamaSalesApp/DamaSales/Pages/Sales.xaml
@@ -2,21 +2,65 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DamaSales.Pages.Sales">
-    <ListView x:Name="categoriesListView"
+    <!--<ListView x:Name="categoriesListView"
             ItemsSource="{Binding}"
             ItemTapped="Handle_ItemTapped"
-            CachingStrategy="RecycleElement">
+            CachingStrategy="RecycleElement"
+            IsEnabled="False">
 
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <StackLayout>
-                        <Image Aspect="AspectFit" Source="http://via.placeholder.com/100x100" />
-                        <Label Text="{Binding Name}" />
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout>
+                            <Image Aspect="AspectFit" Source="http://via.placeholder.com/100x100" />
+                            <Label Text="{Binding Category1Name}" />
+                        </StackLayout>
+                        <StackLayout IsVisible="{Binding HasCategory2}">
+                            <Image Aspect="AspectFit" Source="http://via.placeholder.com/100x100" />
+                            <Label Text="{Binding Category2Name}" />
+                        </StackLayout>
+                        <StackLayout IsVisible="{Binding HasCategory3}">
+                            <Image Aspect="AspectFit" Source="http://via.placeholder.com/100x100" />
+                            <Label Text="{Binding Category3Name}" />
+                        </StackLayout>
+                        <StackLayout IsVisible="{Binding HasCategory4}">
+                            <Image Aspect="AspectFit" Source="http://via.placeholder.com/100x100" />
+                            <Label Text="{Binding Category4Name}" />
+                        </StackLayout>
                     </StackLayout>
+
                 </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
 
-    </ListView>
+    </ListView>-->
+    <StackLayout Orientation="Horizontal" Padding="20,100,20,20">
+        <Grid x:Name="categoriesList" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <StackLayout Orientation="Vertical">
+            <StackLayout Orientation="Horizontal">
+                <Label FontAttributes="Bold" Text="Data"/>
+                <Label Text="{Binding CurrentDate}"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label FontAttributes="Bold" Text="Local"/>
+                <Label Text="{Binding Place}" />
+            </StackLayout>
+            <StackLayout BackgroundColor="#f7f7f7" HeightRequest="250" >
+                <Label Text="Carrinho"></Label>
+            </StackLayout>
+        </StackLayout>
+    </StackLayout>
 </ContentPage>
