--- a/src/DamaSalesApp/DamaSales/Pages/Sales.xaml
+++ b/src/DamaSalesApp/DamaSales/Pages/Sales.xaml
@@ -61,6 +61,19 @@
             </StackLayout>
             <StackLayout BackgroundColor="#f7f7f7" HeightRequest="250" >
                 <Label Text="Carrinho"></Label>
+                <ListView ItemTapped="OnItemTapped" SeparatorVisibility="None" x:Name="backetListView" HasUnevenRows="True" ItemsSource="{Binding BasketItems}" Margin="10">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Orientation="Horizontal">
+                                    <Label Text="{Binding DisplayName}" />
+                                    <Label Text="{Binding Quantity}" />
+                                    <Label Text="{Binding UnitPrice}" />
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
         </StackLayout>
     </StackLayout>
